<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_user"
        android:title="User" />
    <item
        android:id="@+id/menu_organizer"
        android:title="Organizer" />
    <item
        android:id="@+id/menu_admin"
        android:title="Admin" />
</menu>

