<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/list_white"
        android:title="All Events" />
    <item
        android:id="@+id/nav_my_events"
        android:icon="@drawable/ic_personal_events"
        android:title="My Events" />
    <item
        android:id="@+id/nav_qr"
        android:icon="@drawable/qr_white"
        android:title="QR Code Scanner" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user"
        android:title="Profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings_white"
        android:title="Settings" />
</menu>